{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 18,
  "lineage": "61b15e5e-f7af-1173-10d1-c555082712f2",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "massapp_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:044450715850:internet-gateway/igw-04d56841eb80e51bd",
            "id": "igw-04d56841eb80e51bd",
            "owner_id": "044450715850",
            "region": "ap-south-1",
            "tags": {
              "Name": "massapp-igw"
            },
            "tags_all": {
              "Name": "massapp-igw"
            },
            "vpc_id": "vpc-0129312819aa7fa4b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.massapp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "massapp_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:044450715850:route-table/rtb-0161fc8969d21041f",
            "id": "rtb-0161fc8969d21041f",
            "owner_id": "044450715850",
            "propagating_vgws": [],
            "region": "ap-south-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-04d56841eb80e51bd",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "massapp-route-table"
            },
            "tags_all": {
              "Name": "massapp-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0129312819aa7fa4b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.massapp_igw",
            "aws_vpc.massapp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07aca3e68583d1c36",
            "region": "ap-south-1",
            "route_table_id": "rtb-0161fc8969d21041f",
            "subnet_id": "subnet-00fa6cf83d595afba"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.massapp_igw",
            "aws_route_table.massapp_route_table",
            "aws_subnet.massapp_subnet",
            "aws_vpc.massapp_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03744eef2417ed949",
            "region": "ap-south-1",
            "route_table_id": "rtb-0161fc8969d21041f",
            "subnet_id": "subnet-011491f32a8d1c6b7"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.massapp_igw",
            "aws_route_table.massapp_route_table",
            "aws_subnet.massapp_subnet",
            "aws_vpc.massapp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "massapp_cluster_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:044450715850:security-group/sg-03b4408d8ffa93f0d",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03b4408d8ffa93f0d",
            "ingress": [],
            "name": "terraform-20250723170917091900000001",
            "name_prefix": "terraform-",
            "owner_id": "044450715850",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "massapp-cluster-sg"
            },
            "tags_all": {
              "Name": "massapp-cluster-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0129312819aa7fa4b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.massapp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "massapp_node_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:044450715850:security-group/sg-02a93c569716faae0",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02a93c569716faae0",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "terraform-20250723170917096600000002",
            "name_prefix": "terraform-",
            "owner_id": "044450715850",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "massapp-node-sg"
            },
            "tags_all": {
              "Name": "massapp-node-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0129312819aa7fa4b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.massapp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "massapp_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:044450715850:subnet/subnet-00fa6cf83d595afba",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00fa6cf83d595afba",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "044450715850",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "massapp-subnet-0"
            },
            "tags_all": {
              "Name": "massapp-subnet-0"
            },
            "vpc_id": "vpc-0129312819aa7fa4b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.massapp_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:044450715850:subnet/subnet-011491f32a8d1c6b7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-011491f32a8d1c6b7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "044450715850",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "massapp-subnet-1"
            },
            "tags_all": {
              "Name": "massapp-subnet-1"
            },
            "vpc_id": "vpc-0129312819aa7fa4b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.massapp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "massapp_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:044450715850:vpc/vpc-0129312819aa7fa4b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-01ebe5ba22fba40f8",
            "default_route_table_id": "rtb-01ca13291b93a934f",
            "default_security_group_id": "sg-00e784b53b9f4ab21",
            "dhcp_options_id": "dopt-00c6d7859b291e41d",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0129312819aa7fa4b",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-01ca13291b93a934f",
            "owner_id": "044450715850",
            "region": "ap-south-1",
            "tags": {
              "Name": "massapp_vpc"
            },
            "tags_all": {
              "Name": "massapp_vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}